--- a/PythonAXF/templates/cart/cart.html
+++ b/PythonAXF/templates/cart/cart.html
@@ -6,22 +6,69 @@
 {% endblock %}
 
 {% block EXTCSS %}
-    <style>
-        footer .cart span {
-            background: url(/static/base/img/cart1.png) no-repeat center;
-            background-size: 1.25rem;
-        }
-        footer .cart dd {
-            color: #ffd601;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'cart/css/cart.css' %}">
 {% endblock %}
 
 {% block content %}
-购物车
+    <div class="cart">
+    <ul>
+        {% for cart in carts %}
+            <li>
+                <div class=".confirm-wrapper" data-cardid="{{ cart.id }}" id="oneSelect">
+                                        {% if cart.isselect %}
+                    <span class="glyphicon glyphicon-ok"></span>
+                                        {% else %}
+                                            <span class="no"></span>
+                                        {% endif %}
+                </div>
+
+                <div class="content-wrapper">
+                    <div class="img">
+                        <img src="{{ cart.goods.productimg }}" alt="">
+                    </div>
+                    <div class="detail">
+                        <p class="name">{{ cart.goods.productlongname }}</p>
+                        <p class="price" data-price="{{ cart.goods.price }}">{{ cart.goods.price }}</p>
+                        <p class="num" data-number="{{ cart.number }}">X{{ cart.number }}</p>
+                    </div>
+                </div>
+            </li>
+        {% endfor %}
+    </ul>
+
+    <div class="bill">
+        <div class="bill-left">
+            <div class="all" data-all="{{ isall|lower }}" id="allSelect">
+                 {% if isall %}
+                        <span class="glyphicon glyphicon-ok"></span>
+                    {% else %}
+                         <span class="no"></span>
+                    {% endif %}
+                <b>全选</b>
+            </div>
+
+
+
+            <div class="total">
+                <span>￥</span>
+                <b>2019</b>
+            </div>
+        </div>
+
+        <div class="bill-right" id="order">
+            <a href="{% url 'axf:generateorder' %}">
+                下单
+            </a>
+        </div>
+    </div>
 {% endblock %}
+
+
+
+
 
 
 {% block EXTJS %}
     <script src="{% static 'cart/js/cart.js' %}"></script>
 {% endblock %}
+
