--- a/PythonAXF/templates/mine/mine.html
+++ b/PythonAXF/templates/mine/mine.html
@@ -56,7 +56,7 @@
 
             <section class="my">
                 <span>我的订单</span>
-                <a href="#">查看全部订单 <i class="glyphicon glyphicon-chevron-right "></i> </a>
+                <a href="{% url 'axf:orderlist' %}">查看全部订单 <i class="glyphicon glyphicon-chevron-right "></i> </a>
             </section>
 
             <section>
