--- a/PythonAXF/static/market/css/market.css
+++ b/PythonAXF/static/market/css/market.css
@@ -204,3 +204,12 @@ footer .market dd {
 }
 
 
+/*.market .main-content .content-wrapper ul li .bt-wrapper .glyphicon-minus{*/
+    /*display: none;*/
+/*}*/
+
+/*.market .main-content .content-wrapper ul li .bt-wrapper .num{*/
+    /*display: none;*/
+/*}*/
+
+
