--- a/PythonAXF/templates/order/orderdetail.html
+++ b/PythonAXF/templates/order/orderdetail.html
@@ -7,21 +7,32 @@
     订单详情
 {% endblock %}
 
+{% block EXTCSS %}
+    <style>
+        .panel-default button{
+            .padding-left: 100px;
+        }
+    </style>
+{% endblock %}
+
 {% block content %}
-    <div class="orderdetail">
-        <p>
+    <div class="panel panel-default">
+        <div class="panel-body"><p>
             订单号: {{ order.identifier }}
         </p>
         <ul>
             {% for ordergoods in order.ordergoods_set.all %}
-            <li>
-                <span>{{ ordergoods.goods.productlongname }}</span>
-                &nbsp;
-                <i>x{{ ordergoods.number }}</i>
-            </li>
+                <li>
+                    <span>{{ ordergoods.goods.productlongname }}</span>
+                    &nbsp;
+                    <i>x{{ ordergoods.number }}</i>
+                </li>
             {% endfor %}
         </ul>
-
-        <button class="btn btn-default">支付</button>
+        </div>
+     <button class="btn btn-default">支付</button>
     </div>
+
+
+
 {% endblock %}
