--- a/PythonAXF/templates/cart/noLogin.html
+++ b/PythonAXF/templates/cart/noLogin.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-noLogin
-</body>
-</html>
+{% extends 'base/base.html' %}
+
+{% block content %}
+
+
+    <div class="alert alert-danger" role="alert">
+        请登录后操作！&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="btn btn-primary btn-lg" href="{% url 'axf:login' %}" role="button">登录</a>
+    </div>
+
+
+{% endblock %}
